--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -1,8 +1,13 @@
+{% assign thisnodes = site.data.jobnav | where:"url", page.permalink %}
+{% capture difference %} {{ thisnodes | size | minus:1 }} {% endcapture %}
+{% if difference contains '-' %}
+{% assign thisnodes = site.data.jobnav[site.jobnav_developers_node].subnodes | where:"url", page.permalink %}
+{% endif %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{{ page.title }}</title>
+    <title>{{ thisnodes[0].title }}</title>
     {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
