--- a/_includes/render_jobad_list.html
+++ b/_includes/render_jobad_list.html
@@ -20,11 +20,11 @@
             <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{j}}" aria-expanded="true" aria-controls="collapse{{j}}">
 
               <div class="row">
-                <div class="col-xs-10">
+                <div class="col-xs-10 col-sm-10 col-md-11">
                   {{ jobad.title }}
                 </div>
-                <div class="col-xs-2 text-right">
-                  {{ jobad.published | date: "%b %d, %y" }}
+                <div class="col-xs-2 col-sm-2 col-md-1 text-right" style="padding: 0 0.5em 0 0">
+                  {{ jobad.published | date: "%b %d" }}
                 </div>
               </div>
 
