--- a/assets/themes/bootstrap/css/style.css
+++ b/assets/themes/bootstrap/css/style.css
@@ -63,3 +63,13 @@
   background: #57A957;
   border: 1px solid #4c964d;
   color: #FFF; }
+
+  .well-lg-sp{
+    padding: 24px;
+    border-radius: 6px;
+    /* margin: 0px; */
+    margin: 0.5%;
+    width: 32.333333%;
+    margin-top: 0;
+    margin-bottom: 10px;
+  }
