protection against JSON garbage (#9)
Former-commit-id: 46990d1fa6607e6412be2f1aef542f0d58fc75ad

--- a/_includes/render_jobad_list.html
+++ b/_includes/render_jobad_list.html
@@ -57,7 +57,7 @@ var json_data = [];
       "title": "{{ jobad.title }}",
       "sourceName": "{{ jobad.sourceName }}",
       "url": "{{ jobad.url }}",
-      "content": "{{ jobad.content }}",
+      "content": "{{ jobad.content | strip_newlines | remove:  "	" }}",
       "urlFetchPending": "{{ jobad.urlFetchPending }}",
       "published": "{{ jobad.published }}",
       "tags": [{% for tag in jobad.tags %}"{{tag}}",{% endfor %}]
