--- a/assets/themes/bootstrap/resources/bootstrap/css/bootstrap-table.css
+++ b/assets/themes/bootstrap/resources/bootstrap/css/bootstrap-table.css
@@ -6,9 +6,9 @@
 
 .bootstrap-table .table {
     margin-bottom: 0 !important;
-    border-bottom: 1px solid #dddddd;
+    border-bottom: 1px solid #eee;
     border-collapse: collapse !important;
-    border-top: 1px solid #dddddd;
+    border-top: 1px solid #eee;
     border-radius: 4px;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
