--- a/assets/themes/bootstrap/resources/bootstrap/css/style.css
+++ b/assets/themes/bootstrap/resources/bootstrap/css/style.css
@@ -154,6 +154,11 @@ text-decoration: underline;
 #table > tbody > tr> td.spanLink:hover{
   cursor: pointer;
 }
+
+.table-hover>tbody>tr:hover>td, .table-hover>tbody>tr:hover>th {
+  background-color: #d9edf7;
+}
+
 #table > tbody> tr >td.vert-align{
     vertical-align: middle;
 }
