--- a/assets/themes/bootstrap/resources/bootstrap/css/style.css
+++ b/assets/themes/bootstrap/resources/bootstrap/css/style.css
@@ -156,7 +156,7 @@ text-decoration: underline;
 }
 
 .table-hover>tbody>tr:hover>td, .table-hover>tbody>tr:hover>th {
-  background-color: #d9edf7;
+  background-color: #f9f9f9;
 }
 
 .detail-view h2 {
@@ -198,8 +198,11 @@ text-decoration: underline;
 .labelTag{
   float:left;
   margin: 5px 5px 0px 0px;
-  background: #337ab7;
-  }
+  background: #E1ECF4;
+  color: #39739d;
+  font-weight: normal;
+  border-radius: .25em;
+}
 .table>thead>tr>th, 
 .table>tbody>tr>th, 
 .table>tfoot>tr>th, 
