--- a/assets/themes/bootstrap/resources/bootstrap/css/style.css
+++ b/assets/themes/bootstrap/resources/bootstrap/css/style.css
@@ -83,6 +83,7 @@ p{
 }
 
 .filterRow{
+  display:none;
   margin-right: 0px;
   margin-left: 0px;
 }
@@ -91,10 +92,20 @@ p{
   display:none;
 }
 
+span.loader{
+    display: block;
+    height: 300px;
+}
 
-
-.filterRow{
-  display:none;
+span.loader > i{
+  display:block;
+  width:100%;
+  color:#1A4982;
+}
+span.loaderFiller{
+    display: block;
+    width: 100%;
+    height: 40%;
 }
 
 div.fixed-table-body > div.fixed-table-pagination > div.pull-left.pagination-detail > span.page-list > span > ul.dropdown-menu{
