--- a/_includes/render_jobad_list.html
+++ b/_includes/render_jobad_list.html
@@ -23,7 +23,7 @@
 </div>
 -->
 <div class="row searchRow">
-    <form class="col-xs-4" id="jobSearchForm">
+    <form class="col-sm-4" id="jobSearchForm">
         <div class="input-group">
             <label class="sr-only" for="jobSearchInputID">Search</label>
             <input type="search" class="form-control" id="jobSearchInputID" placeholder="Search">
