search with the help of lunr.js

--- a/_includes/render_jobad_list.html
+++ b/_includes/render_jobad_list.html
@@ -97,6 +97,7 @@ var json_data = [];
   {% endfor %}
 ];
 </script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/lunr.js/2.0.1/lunr.min.js"></script>
 <noscript>
     <style>
         #table {display:none;}
