--- a/_includes/render_jobad_list.html
+++ b/_includes/render_jobad_list.html
@@ -97,7 +97,17 @@ var json_data = [];
   {% endfor %}
 ];
 </script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/lunr.js/2.0.1/lunr.min.js"></script>
+<script>
+    $(document).ready(function () {
+        try {
+            // Send a request to get the index json file
+            $.getJSON('/assets/lunar-index/{{ datafile }}.json', onLoadLunarIndex);
+        } catch (err) {
+            console.log(err);
+        }
+    })
+</script>
+<script src="/assets/lunr.js"></script>
 <noscript>
     <style>
         #table {display:none;}
