--- a/_includes/render_jobad_list.html
+++ b/_includes/render_jobad_list.html
@@ -26,9 +26,9 @@
     <form class="col-sm-4" id="jobSearchForm">
         <div class="input-group">
             <label class="sr-only" for="jobSearchInputID">Search</label>
-            <input type="search" class="form-control" id="jobSearchInputID" placeholder="Search">
+            <input disabled type="search" class="form-control" id="jobSearchInputID" placeholder="Search" >
             <span class="input-group-btn" id="jobSearchGroup">
-                <button type="submit" class="btn btn-default btn-primary" id="jobSearchButton">
+                <button disabled type="submit" class="btn btn-default btn-primary" id="jobSearchButton">
                     <i class="glyphicon glyphicon-search"></i>
                 </button>
             </span>
@@ -43,75 +43,51 @@
 <div class="row filterRow">
     <div class="col-xs-4 well well-lg-sp leftFilter">
         <div class="radio">
-            <label><input type="radio" id="checkboxWorldwide" class="filter-checkbox" name="optradio" checked="" data-filter="all">Show jobs worldwide</label>
+            <label><input disabled type="radio" id="checkboxWorldwide" class="filter-checkbox" name="optradio" checked="" data-filter="all">Show jobs worldwide</label>
         </div>
         <div class="checkbox">
-          <label><input type="checkbox" id="checkboxUStz" class="filter-checkbox">Show jobs in America timezones</label>
+          <label><input disabled type="checkbox" id="checkboxUStz" class="filter-checkbox">Show jobs in America timezones</label>
         </div>
         <div class="checkbox">
-          <label><input type="checkbox" id="checkboxEUtz" class="filter-checkbox">Show jobs in European timezones</label>
+          <label><input disabled type="checkbox" id="checkboxEUtz" class="filter-checkbox">Show jobs in European timezones</label>
         </div>
         <div class="checkbox">
-          <label><input type="checkbox" id="checkboxASIAtz" class="filter-checkbox">Show jobs in Asia\Pacific timezones</label>
+          <label><input disabled type="checkbox" id="checkboxASIAtz" class="filter-checkbox">Show jobs in Asia\Pacific timezones</label>
         </div>
     </div>
     <div class="col-xs-4 well well-lg-sp middleFilter">
         <div class="checkbox">
-          <label><input type="checkbox" id="checkboxUSauth" class="filter-checkbox">Hide jobs requiring US work authorization</label>
+          <label><input disabled type="checkbox" id="checkboxUSauth" class="filter-checkbox">Hide jobs requiring US work authorization</label>
         </div>
         <div class="checkbox">
-          <label><input type="checkbox" id="checkboxEUauth" class="filter-checkbox">Hide jobs requiring EU work authorization</label>
+          <label><input disabled type="checkbox" id="checkboxEUauth" class="filter-checkbox">Hide jobs requiring EU work authorization</label>
         </div>
         <p class="filterTip">Some jobs require that you "..must be GCH(Green Card Holder).." In case you have no such authorization - you can hide such jobs</p>
     </div>
     <div class="col-xs-4 well well-lg-sp rightFilter">
         <div class="checkbox">
-          <label><input type="checkbox" id="checkbox50remote" class="filter-checkbox">Show 50% remote jobs</label>
+          <label><input disabled type="checkbox" id="checkbox50remote" class="filter-checkbox">Show 50% remote jobs</label>
         </div>
         <p class="filterTip">Some job descriptions mention "remote working days" or "occasional remote working". This is a clear indicator that you can not work remote from anywhere. We name such jobs "50% remote".</p>
     </div>
 </div>
 <div>
-<span class="loader"><span class="loaderFiller"></span><i class="fa fa-circle-o-notch fa-spin fa-3x fa-fw align-middle"></i>
+<span id="loaderID" class="loader"><span class="loaderFiller"></span><i class="fa fa-circle-o-notch fa-spin fa-3x fa-fw align-middle"></i>
 <span class="sr-only">Loading...</span></span>
 <table id="table">
 </table>
-<div class="alertJs alert alert-danger" role="alert">Oh snap! You need JS enabled to be able see this table! </div>
+<div id="alertJsID" class="alert alertJs alert-danger" role="alert">Oh snap! You need JS enabled to be able see this table! </div>
+<div style="display: none" id="alertCanNotLoadID" class="alert alert-danger" role="alert">Error!</div>
 </div>
 <script>
-var json_data = [];
-  json_data = [
-  {% for jobad in jobadlist %}
-    {
-      "title": "{{ jobad.title }}",
-      "sourceName": "{{ jobad.sourceName }}",
-      "url": "{{ jobad.url }}",
-      "content": "{{ jobad.content | strip_newlines | remove:  "	" }}",
-      "published": "{{ jobad.published }}",
-      "id": "{{ jobad.id }}",
-      "tagsNames1": [{% for tag in jobad.tagsNames1 %}"{{ tag }}",{% endfor %}],
-      "tagsNames2": [{% for tag in jobad.tagsNames2 %}"{{ tag }}",{% endfor %}],
-      "tags": [{% for tag in jobad.tags %}"{{ tag }}",{% endfor %}]
-    }
-    {% unless forloop.last %},{% endunless %}
-  {% endfor %}
-];
+    var dataFileName;
+    dataFileName = '{{ datafile }}';
 </script>
-<script>
-    $(document).ready(function () {
-        try {
-            // Send a request to get the index json file
-            $.getJSON('/assets/lunar-index/{{ datafile }}.json', onLoadLunarIndex);
-        } catch (err) {
-            console.log(err);
-        }
-    })
-</script>
-<script src="/assets/lunr.js"></script>
+<script async src="/assets/lunr.js"></script>
 <noscript>
     <style>
         #table {display:none;}
-        .alertJs {display:block;}
         span.loader{display:none;}
+        div#alertJsID {display: block; !important;}
     </style>
 </noscript>
