improving Lunr loading, copy.sh

--- a/_includes/render_jobad_list.html
+++ b/_includes/render_jobad_list.html
@@ -83,7 +83,6 @@
     var dataFileName;
     dataFileName = '{{ datafile }}';
 </script>
-<script async src="/assets/lunr.js"></script>
 <noscript>
     <style>
         #table {display:none;}
@@ -91,3 +90,4 @@
         div#alertJsID {display: block; !important;}
     </style>
 </noscript>
+<script src="/assets/lunr.js"></script>
