layout changed to "restart" theme

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 ---
 theme :
-  name : bootstrap
+  name : restart
 ---
 {% include JB/setup %}
-{% include themes/bootstrap/default.html %}
+{% include themes/restart/default.html %}
