"restart" fixes, HTTPS, jquery

--- a/_includes/themes/restart/default.html
+++ b/_includes/themes/restart/default.html
@@ -13,7 +13,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,600italic,700,700italic,300italic" type="text/css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,600italic,700,700italic,300italic" type="text/css">
 <link rel="stylesheet" href="{{ ASSET_PATH }}/css/animate.css" type="text/css">
 <link rel="stylesheet" href="{{ ASSET_PATH }}/js/woothemes-FlexSlider-06b12f8/flexslider.css" type="text/css" media="screen">
 <link rel="stylesheet" href="{{ ASSET_PATH }}/js/prettyPhoto_3.1.5/prettyPhoto.css" type="text/css" media="screen">
@@ -68,7 +68,7 @@
       </footer>
     </div>
 
-  <script type="text/javascript" src="{{ ASSET_PATH }}/js/jquery-1.12.4.min.js"></script>
+  <script type="text/javascript" src="{{ ASSET_PATH }}/js/jquery-1.12.4.js"></script>
   <!--
     <script src=https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js></script>
     <script>window.jQuery||document.write('<script src="../assets/js/vendor/jquery.min.js"><\/script>')</script>
