--- a/_includes/render_jobad_list.html
+++ b/_includes/render_jobad_list.html
@@ -5,72 +5,122 @@
 {% endif %}
 {% assign datafile = thisnodes[0].datafile %}
 {% assign jobadlist = site.data[datafile].items %}
-<div class="row searchRow">
-    <form class="col-sm-4" id="jobSearchForm">
-        <div class="input-group">
-            <label class="sr-only" for="jobSearchInputID">Search</label>
-            <input disabled type="search" class="form-control" id="jobSearchInputID" placeholder="Search" >
-            <span class="input-group-btn" id="jobSearchGroup">
-                <button disabled type="submit" class="btn btn-default btn-primary" id="jobSearchButton">
-                    <i class="glyphicon glyphicon-search"></i>
-                </button>
-            </span>
+<section class="hgroup">
+    <div class="container" style="padding-bottom: 0px; padding-top: 0px;">
+        <div class="row searchRow">
+            <form class="col-sm-4 col-md-4" id="jobSearchForm">
+                <div class="input-group">
+                    <label class="sr-only" for="jobSearchInputID">Search</label>
+                    <input type="search" class="form-control" id="jobSearchInputID" placeholder="Search">
+                    <span class="input-group-btn" id="jobSearchGroup">
+                                   <button type="submit" class="btn btn-default btn-primary" id="jobSearchButton">
+                                       <i class="glyphicon glyphicon-search"></i>
+                                   </button>
+                              </span>
+                </div>
+            </form>
         </div>
-    </form>
-</div>
 
-<div class="row">
-    &nbsp;
-</div>
+        <div class="row">
+            &nbsp;
+        </div>
 
-<div class="row filterRow">
-    <div class="col-xs-4 well well-lg-sp leftFilter">
-        <div class="radio">
-            <label><input disabled type="radio" id="checkboxWorldwide" class="filter-checkbox" name="optradio" checked="" data-filter="all">Show jobs worldwide</label>
-        </div>
-        <div class="checkbox">
-          <label><input disabled type="checkbox" id="checkboxUStz" class="filter-checkbox">Show jobs in America timezones</label>
-        </div>
-        <div class="checkbox">
-          <label><input disabled type="checkbox" id="checkboxEUtz" class="filter-checkbox">Show jobs in European timezones</label>
-        </div>
-        <div class="checkbox">
-          <label><input disabled type="checkbox" id="checkboxASIAtz" class="filter-checkbox">Show jobs in Asia\Pacific timezones</label>
+        <div class="row">
+            <div class="col-sm-4 col-md-4">
+                <fieldset style="font-size: 14px; font-weight: 300;line-height: 1.5em;">
+                    <div class="radio">
+                        <label><input type="radio" id="checkboxWorldwide" class="filter-checkbox"
+                                      name="optradio" checked="" data-filter="all">Show jobs
+                            worldwide</label>
+                    </div>
+                    <div class="checkbox">
+                        <label><input type="checkbox" id="checkboxUStz" class="filter-checkbox">Show jobs in
+                            America timezones</label>
+                    </div>
+                    <div class="checkbox">
+                        <label><input type="checkbox" id="checkboxEUtz" class="filter-checkbox">Show jobs in
+                            European timezones</label>
+                    </div>
+                    <div class="checkbox">
+                        <label><input type="checkbox" id="checkboxASIAtz" class="filter-checkbox">Show jobs
+                            in Asia\Pacific timezones</label>
+                    </div>
+                </fieldset>
+            </div>
+            <div class="col-sm-4 col-md-4">
+                <fieldset>
+                    <div class="checkbox">
+                        <label><input type="checkbox" id="checkboxUSauth" class="filter-checkbox">Hide jobs
+                            requiring US work authorization</label>
+                    </div>
+                    <div class="checkbox">
+                        <label><input type="checkbox" id="checkboxEUauth" class="filter-checkbox">Hide jobs
+                            requiring EU work authorization</label>
+                    </div>
+                    <p class="filterTip smalltext">Some jobs require that you "..must be GCH(Green Card Holder).." In
+                        case you have no such authorization - you can hide such jobs</p>
+                </fieldset>
+            </div>
+            <div class="col-sm-4 col-md-4">
+                <fieldset>
+                    <div class="checkbox">
+                        <label><input type="checkbox" id="checkbox50remote" class="filter-checkbox">Show 50%
+                            remote jobs</label>
+                    </div>
+                    <p class="filterTip smalltext">Some job descriptions mention "remote working days" or "occasional
+                        remote working". This is a clear indicator that you can not work remote from
+                        anywhere. We name such jobs "50% remote".</p>
+                </fieldset>
+            </div>
         </div>
     </div>
-    <div class="col-xs-4 well well-lg-sp middleFilter">
-        <div class="checkbox">
-          <label><input disabled type="checkbox" id="checkboxUSauth" class="filter-checkbox">Hide jobs requiring US work authorization</label>
+</section>
+
+
+<section>
+    <div class="container">
+        <div>
+            <div id="loaderID" class="loader">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xs-1 col-xs-offset-5">
+                            <div class="center-block">
+                                <i class=" center-block fa fa-cog fa-spin fa-3x fa-fw"></i>
+                                <span class="center-block sr-only">Loading...</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <table id="table"></table>
+            <div class="clearfix"></div>
+            <div id="alertCanNotLoadID" class="alert alert-danger" role="alert" style="display: none">Error!</div>
+            <div id="alertJsID" class="alertJs alert alert-danger" role="alert">
+                Oh snap! You need JS enabled to be able to see this table!
+            </div>
         </div>
-        <div class="checkbox">
-          <label><input disabled type="checkbox" id="checkboxEUauth" class="filter-checkbox">Hide jobs requiring EU work authorization</label>
-        </div>
-        <p class="filterTip">Some jobs require that you "..must be GCH(Green Card Holder).." In case you have no such authorization - you can hide such jobs</p>
+
+        <script>
+            var json_data = [];
+            var dataFileName;
+            dataFileName = '{{ datafile }}';
+        </script>
+        <script src="/assets/lunr.js"></script>
+        <noscript>
+            <style>
+                #table {
+                    display: none;
+                }
+                span.loader {
+                    display: none;
+                }
+                div#alertJsID {
+                    display: block;!important;
+                }
+            </style>
+        </noscript>
     </div>
-    <div class="col-xs-4 well well-lg-sp rightFilter">
-        <div class="checkbox">
-          <label><input disabled type="checkbox" id="checkbox50remote" class="filter-checkbox">Show 50% remote jobs</label>
-        </div>
-        <p class="filterTip">Some job descriptions mention "remote working days" or "occasional remote working". This is a clear indicator that you can not work remote from anywhere. We name such jobs "50% remote".</p>
-    </div>
-</div>
-<div>
-<span id="loaderID" class="loader"><span class="loaderFiller"></span><i class="fa fa-circle-o-notch fa-spin fa-3x fa-fw align-middle"></i>
-<span class="sr-only">Loading...</span></span>
-<table id="table">
-</table>
-<div id="alertJsID" class="alert alertJs alert-danger" role="alert">Oh snap! You need JS enabled to be able see this table! </div>
-<div style="display: none" id="alertCanNotLoadID" class="alert alert-danger" role="alert">Error!</div>
-</div>
-<script>
-    var dataFileName;
-    dataFileName = '{{ datafile }}';
-</script>
-<noscript>
-    <style>
-        #table {display:none;}
-        span.loader{display:none;}
-        div#alertJsID {display: block; !important;}
-    </style>
-</noscript>
-<script src="/assets/lunr.js"></script>
+
+</section>
