--- a/_includes/themes/restart/default.html
+++ b/_includes/themes/restart/default.html
@@ -87,7 +87,7 @@
     <script type="text/javascript" src="{{ ASSET_PATH }}/js/collapser.js"></script>
 
   <script type="text/javascript" src="{{ ASSET_PATH }}/js/bootstrap-table.js"></script>
-  <script type="text/javascript" src="{{ ASSET_PATH }}/js/bootstrap-table-locale-all.js"></script>
+  <script type="text/javascript" src="{{ ASSET_PATH }}/js/bootstrap-table-en-US.min.js"></script>
   <script type="text/javascript" src="{{ ASSET_PATH }}/js/render_jobad_list_filter.js"></script>
 
   {% include JB/analytics %}
