--- a/assets/themes/restart/css/style.css
+++ b/assets/themes/restart/css/style.css
@@ -2304,9 +2304,11 @@ th {
 .table-striped > tbody > tr:nth-of-type(odd) {
   background-color: #f9f9f9;
 }
+/*
 .table-hover > tbody > tr:hover {
   background-color: #f5f5f5;
 }
+*/
 table col[class*="col-"] {
   position: static;
   float: none;
