fix for PlusMinus visited links
Former-commit-id: 61c88d54d42aeb8d1714c95f6e58312b865ab1e5

--- a/assets/themes/restart/css/userstyle.css
+++ b/assets/themes/restart/css/userstyle.css
@@ -65,6 +65,6 @@ a.rowTitleClass:visited {
     color: #999999 !important;
 }
 
-a.visited {
+a.detail-icon:visited{
     color: #999999 !important;
 }
