--- a/assets/themes/restart/css/userstyle.css
+++ b/assets/themes/restart/css/userstyle.css
@@ -68,3 +68,21 @@ a.rowTitleClass:visited {
 a.detail-icon:visited{
     color: #999999 !important;
 }
+
+@media only screen and (max-width: 767px) {
+
+    #table {
+        margin-left: -20px !important;
+        margin-right: -20px !important;
+    }
+
+    #table > tbody > tr[data-index] > td.spanLink:nth-child(1) {
+        padding-right: 0 !important;
+    }
+
+    #table > tbody > tr[data-index] > td.spanLink:nth-child(2) {
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+    }
+
+}
