layout of index.html; bugfix in search JS
Former-commit-id: 83f339630a621fc538841f1b93abb42d2707289b

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -7,10 +7,10 @@ layout: default
 <section class="hgroup">
     <div class="container" style="padding-top: 0px;">
         <div class="row">
-            <div class="col-xs-4">
-                <h1 style="line-height: 1.3em;color: #428bca;">AN AGGREGATOR FOR REMOTE (TECH AND NON-TECH) JOBS</h1>
-            </div>
             <div class="col-xs-8">
+                <h1 style="line-height: 1.3em;color: #428bca;">AN AGGREGATOR FOR REMOTE  JOBS <small>(in tech and non-tech)</small></h1>
+            </div>
+            <div class="col-xs-4">
                 <ul style="padding-left: 0px;">
                     <li>Only pre-filtered true remote jobs</li>
                     <li>Tech jobs categorized by technology stack and job title</li>
