--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -8,7 +8,8 @@ layout: default
     <div class="container" style="padding-top: 0px;">
         <div class="row">
             <div class="col-xs-8">
-                <h1 style="line-height: 1.3em;color: #428bca;">AN AGGREGATOR FOR REMOTE  JOBS <small>(in tech and non-tech)</small></h1>
+                <h1 style="color: #428bca;">AN AGGREGATOR FOR REMOTE  JOBS<br/>
+                    <small>in tech and non-tech</small></h1>
             </div>
             <div class="col-xs-4">
                 <ul style="padding-left: 0px;">
