--- a/_includes/themes/restart/default.html
+++ b/_includes/themes/restart/default.html
@@ -60,8 +60,8 @@
         <section class="copyright">
           <div class="container">
             <div class="row">
-              <div class="col-xs-6 col-md-6"> &copy; {{ site.time | date: '%Y' }} all rights reserved </div>
-              <div class="text-right col-xs-6 col-md-6"> Designed by {{ site.author.name }} </div>
+              <div class="col-xs-6 col-md-6"></div>
+              <div class="text-right col-xs-6 col-md-6">© {{ site.author.name }}</div>
             </div>
           </div>
         </section>
