minor changes, one file deleted

--- a/_includes/themes/restart/default.html
+++ b/_includes/themes/restart/default.html
@@ -46,7 +46,7 @@
           <ul class="nav pull-right navbar-nav">
             {% assign pages_list = site.pages %}
             {% assign group = 'navigation' %}
-            {% include JB/pages_list_new %}
+            {% include JB/pages_list %}
           </ul>
         </div>
       </div>
