--- a/_includes/themes/restart/default.html
+++ b/_includes/themes/restart/default.html
@@ -47,7 +47,29 @@
             {% assign pages_list = site.pages %}
             {% assign group = 'navigation' %}
             {% include JB/pages_list %}
+
+            <li class="dropdown"> <a data-toggle="dropdown" class="dropdown-toggle" href="#">Developer jobs<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                {% assign pages_list = site.data.jobnav[site.jobnav_developers_node].subnodes %}
+                {% include JB/pages_list %}
+              </ul>
+            </li>
+
+            <li class="dropdown"> <a data-toggle="dropdown" class="dropdown-toggle" href="#">Tech jobs<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                {% assign pages_list = site.data.jobnav[site.jobnav_tech_node].subnodes %}
+                {% include JB/pages_list %}
+              </ul>
+            </li>
+
+            <li class="dropdown"> <a data-toggle="dropdown" class="dropdown-toggle" href="#">Non-tech jobs<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                {% assign pages_list = site.data.jobnav[site.jobnav_nontech_node].subnodes %}
+                {% include JB/pages_list %}
+              </ul>
+            </li>
           </ul>
+
         </div>
       </div>
     </div>
