--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -2,8 +2,6 @@
 layout: default
 ---
 {% include JB/setup %}
-{% assign col1_nodes = site.data.jobnav[site.jobnav_developers_node].subnodes %}
-
 <section class="hgroup">
     <div class="container" style="padding-top: 0px;">
         <div class="row">
@@ -26,29 +24,25 @@ layout: default
     <div class="container" style="padding-top: 0px; border-bottom: none;">
         <div class="row">
             <div class="col-md-4">
-                <h2 class="section_header elegant">&nbsp;Developer jobs<small>For each technology stack</small></h2>
+                <h2 class="section_header elegant">{{ site.data.jobnav[site.jobnav_developers_node].title }}</h2>
                 <p></p>
-                {% for node in col1_nodes %}
+                {% for node in site.data.jobnav[site.jobnav_developers_node].subnodes %}
                 <p><a href="{{ node.url }}">{{ node.title }}</a> - {{ node.tagline }}
                 </p>
                 {% endfor %}
             </div>
             <div class="col-md-4">
-                <h2 class="section_header elegant">&nbsp;Tech jobs<small>For techies who are not developers</small></h2>
-                {% for node in site.data.jobnav %}
-                {% if node.col == 2 %}
+                <h2 class="section_header elegant">{{ site.data.jobnav[site.jobnav_tech_node].title }}</h2>
+                {% for node in site.data.jobnav[site.jobnav_tech_node].subnodes %}
                 <p><a href="{{ node.url }}">{{ node.title }}</a> - {{ node.tagline }}
                 </p>
-                {% endif %}
                 {% endfor %}
             </div>
             <div class="col-md-4">
-                <h2 class="section_header elegant">&nbsp;Non-tech jobs<small>"Remote" is not only for engineers!</small></h2>
-                {% for node in site.data.jobnav %}
-                {% if node.col == 3 %}
+                <h2 class="section_header elegant">{{ site.data.jobnav[site.jobnav_nontech_node].title }}</h2>
+                {% for node in site.data.jobnav[site.jobnav_nontech_node].subnodes %}
                 <p><a href="{{ node.url }}">{{ node.title }}</a> - {{ node.tagline }}
                 </p>
-                {% endif %}
                 {% endfor %}
             </div>
         </div>
