--- a/_includes/themes/restart/page-jobad-list.html
+++ b/_includes/themes/restart/page-jobad-list.html
@@ -1,7 +1,18 @@
 {% assign thisnodes = site.data.jobnav | where:"url", page.permalink %}
+
 {% capture difference %} {{ thisnodes | size | minus:1 }} {% endcapture %}
 {% if difference contains '-' %}
   {% assign thisnodes = site.data.jobnav[site.jobnav_developers_node].subnodes | where:"url", page.permalink %}
+{% endif %}
+
+{% capture difference %} {{ thisnodes | size | minus:1 }} {% endcapture %}
+{% if difference contains '-' %}
+{% assign thisnodes = site.data.jobnav[site.jobnav_tech_node].subnodes | where:"url", page.permalink %}
+{% endif %}
+
+{% capture difference %} {{ thisnodes | size | minus:1 }} {% endcapture %}
+{% if difference contains '-' %}
+{% assign thisnodes = site.data.jobnav[site.jobnav_nontech_node].subnodes | where:"url", page.permalink %}
 {% endif %}
 
 <section class="hgroup">
