--- a/_includes/themes/restart/page-jobad-list.html
+++ b/_includes/themes/restart/page-jobad-list.html
@@ -18,6 +18,10 @@
 <section class="hgroup">
   <div class="container">
     <h1 class="elegant">{{ thisnodes[0].title }}</h1>
+    {% if thisnodes[0].undertagline %}
+    <h2>{{ thisnodes[0].undertagline }}</h2>
+    {% endif %}
+
     <ul class="breadcrumb pull-right">
       <li><a href="{{ HOME_PATH }}">Home</a> </li>
       <li class="active">{{ thisnodes[0].title }}</li>
