post, page layout, FAQ as single posts
Former-commit-id: e25e9a5341c4aeaae1e244fa390110c0dbd6cf99

--- a/_includes/themes/restart/page.html
+++ b/_includes/themes/restart/page.html
@@ -6,6 +6,7 @@
 
         <ul class="breadcrumb pull-right">
             <li><a href="{{ HOME_PATH }}">Home</a> </li>
+            {% if page.breadcrumb_title %}<li><a href="{{ page.breadcrumb_url }}">{{ page.breadcrumb_title }}</a></li>{% endif %}
             <li class="active">{{ page.title }}</li>
         </ul>
     </div>
